platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/runtime/traces/exam.exams-curated-exam01-v1.516fbde6.attempt.004/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/runtime/workspaces/exam.exams-curated-exam01-v1.516fbde6.attempt.004/submission/next_character.c: In function 'next_character':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/exam_integration/bounded_probe/runtime/workspaces/exam.exams-curated-exam01-v1.516fbde6.attempt.004/submission/next_character.c:12:1: error: control reaches end of non-void function [-Werror=return-type]
   12 | }
      | ^
cc1: all warnings being treated as errors
